[package]
name = "promql"
description = "PromQL parser"
version = "0.3.0"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vthriller/promql"

[dependencies]
quick-error = "1.2"

[dependencies.nom]
version = "4.0.0-beta1"
features = ["verbose-errors"]
