[package]
name = "promql"
description = "PromQL parser"
version = "0.4.1"
authors = ["vthriller <unixway.drive+rs@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/vthriller/promql"

[dependencies]
quick-error = "2.0"
nom = "7.0"
builder-pattern = "0.3"

# feature: serializable
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[features]
default = []
serializable = ["serde", "serde_derive"]
